[package]
name = "casper-db-utils"
version = "0.1.0"
authors = ["George Pisaltu <georgep@casperlabs.io>", "Joe Sacher <joe.sacher@casper.network>"]
edition = "2021"
description = "Utilities for working with databases of the Casper blockchain."
documentation = "https://docs.rs/casper-db-utils"
readme = "README.md"
homepage = "https://casper.network"
repository = "https://github.com/casper-network/casper-db-utils"
license = "Apache-2.0"
build = "build.rs"

[dependencies]
anyhow = "1"
bincode = "1"
casper-execution-engine = "4"
casper-hashing = "1.4"
casper-node = "=1.4.15-alt"
casper-types = "2"
clap = { version = "3", features = ["cargo"] }
futures = "0.3.21"
lmdb = "0.8.0"
lmdb-sys = "0.8.0"
log = "0.4.17"
once_cell = "1"
reqwest = { version = "0.11.10", features = ["stream"] }
ringbuf = "0.2.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
simplelog = "0.12.0"
tar = "0.4.38"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
zstd = "0.12"

[dev-dependencies]
once_cell = "1"
rand = "0.8.5"
tempfile = "3"

[build-dependencies]
cargo-lock = { version = "9.0", default-features = false }

[package.metadata.deb]
revision = "0"
assets = [["./target/release/casper-db-utils", "/usr/bin/casper-db-utils", "755"]]
extended-description = """
Package for Casper DB Utils to perform various actions on a Casper-Node database.
"""

[package.metadata.deb.variants.focal]
name = "casper-db-utils"
revision = "0+focal"

[package.metadata.deb.variants.jammy]
name = "casper-db-utils"
revision = "0+jammy"

[package.metadata.deb.variants.noble]
name = "casper-db-utils"
revision = "0+noble"
